добавлена возможность получить все таблицы источника
